@@ -10,6 +10,7 @@ Todas as alterações significativas ao CatecheSis são registadas aqui.
 #### Melhorias de usabilidade:
 
 #### Correções:
+- A fórmula de cálculo do catecismo recomendado para inscrição na catequese com base na idade foi revista para Portugal, nos casos em que a inscrição se efetua na segunda metade do ano catequético (entre Janeiro e Junho);
 
 
 ## [Versão 2.2.1] - 2024-02-13
